fix: overflow on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -77,7 +77,7 @@ h2 {
 .head-translate-container {
   position: relative;
   left: -10%;
-  width: 102%;
+  width: 100%;
   overflow: hidden;
 }
 
